fix footer spacing and display issues

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -7,7 +7,29 @@
   --color-t-teal: #50bec1;
 }
 
-.paragraph > a {
-  text-decoration-color: var(--color-purple-600);
-  text-decoration-line: underline;
+
+
+@layer base {
+  h1 {
+    font-size: var(--text-4xl);
+    font-weight: var(--font-weight-bold);
+    color: var(--color-gray-900);
+  }
+  h2 {
+    font-size: var(--text-3xl);
+    font-weight: var(--font-weight-bold);
+    color: var(--color-gray-900);
+  }
+  .paragraph > p {
+    @apply mt-6 text-lg leading-8 text-gray-600 mx-auto;
+  }
+  .paragraph > p > strong {
+    text-decoration-line: underline;
+    text-decoration: var(--color-purple-600);
+    font-weight: var(--font-weight-bold);
+  }
+  .paragraph > a {
+    text-decoration-color: var(--color-purple-600);
+    text-decoration-line: underline;
+  }
 }
